---------------------------------------------------------------------------------------------------
Version: 18.0.3
Date: 2020-03-19
  Features:
  Changes:
  Bugfixes:
    - Fix player health bonus error when a player had no character - base game API bug.
    - Fix player health bonus being subtracted to not wipe out any other mods setting of health bonus.
    - Fix error on removal of Biter Extermintion mod when the shop GUI was next opened.
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.2
Date: 2020-03-18
  Features:
    - Added player health bonus software.
    - Added optional player whitelist for the shop.
  Changes:
  Bugfixes:
    - Shop prices are rounded down so they match on internal cost and display. As the totoal coins taken was always rounded down.
    - Updated to use verson controlled style prototypes to avoid clashes with other mods using different versions of my utility library.
  Info:
    - Requires Factorio 0.18.13 or above
---------------------------------------------------------------------------------------------------
Version: 18.0.1
Date: 2020-02-26
  Features:
    - Add a clickable HELP gui to the shop.
  Changes:
    - Add remote interface to get the payment chest for other mods to put coins in to it.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 18.0.0
Date: 2020-02-19
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: